# tradingview-mcp-india

./: README.md  pyproject.toml
scripts/: refresh_india_indices.py  refresh_india_symbols.py
src/tradingview_mcp/: server.py
src/tradingview_mcp/coinlist/: bse.txt  nse.txt
src/tradingview_mcp/core/data/: india_indices.json  india_indices.py
src/tradingview_mcp/core/services/: india_service.py  news_service.py  proxy_manager.py  sentiment_service.py  yahoo_finance_service.py
src/tradingview_mcp/core/utils/: validators.py
